Allow tasks to delete, small CSS fix for overflow task text

--- a/src/style.css
+++ b/src/style.css
@@ -155,6 +155,7 @@ h3 {
   flex: 1 0 auto;
   justify-content: center;
   padding-inline: 2rem;
+  max-width: 100%;
 }
 
 .wrapper-task *[data-is-hidden="true"] {
